--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,102 @@
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
 asttokens==2.4.1
+attrs==23.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+cffi==1.15.1
 cloudpickle==3.0.0
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
+easyAI==2.0.12
+exceptiongroup==1.2.1
 executing==2.0.1
 Farama-Notifications==0.0.4
+fastjsonschema==2.16.3
+filelock==3.13.3
+fqdn==1.5.1
+fsspec==2024.3.1
 gym==0.26.2
 gym-notices==0.0.8
 gymnasium==0.29.1
+idna==3.4
 ipykernel==6.29.4
 ipython==8.25.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
 jedi==0.19.1
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+MarkupSafe==2.1.2
 matplotlib-inline==0.1.7
+mistune==2.0.5
+mpmath==1.3.0
+nbclassic==1.0.0
+nbclient==0.7.4
+nbconvert==7.4.0
+nbformat==5.8.0
 nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==6.5.4
+notebook_shim==0.2.3
 numpy==1.26.4
 packaging==24.0
+pandocfilters==1.5.0
 parso==0.8.4
+pickleshare==0.7.5
+pillow==10.3.0
 platformdirs==4.2.2
+prometheus-client==0.16.0
 prompt_toolkit==3.0.46
 psutil==5.9.8
 pure-eval==0.2.2
+pycparser==2.21
 pygame==2.5.2
 Pygments==2.18.0
+pyrsistent==0.19.3
 python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
 pywin32==306
+pywinpty==2.0.10
+PyYAML==6.0
 pyzmq==26.0.3
+qtconsole==5.4.3
+QtPy==2.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+Send2Trash==1.8.2
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
 stack-data==0.6.3
+sympy==1.12
+terminado==0.17.1
+tinycss2==1.2.1
+torch==2.2.2
+torchvision==0.17.2
 tornado==6.4
 traitlets==5.14.3
 typing_extensions==4.12.1
+uri-template==1.2.0
 wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
+widgetsnbextension==4.0.7
