--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+absl-py==2.1.0
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
 attrs==23.1.0
+Babel==2.14.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.15.1
+charset-normalizer==3.3.2
 cloudpickle==3.0.0
 colorama==0.4.6
 comm==0.2.2
@@ -20,34 +27,57 @@ executing==2.0.1
 Farama-Notifications==0.0.4
 fastjsonschema==2.16.3
 filelock==3.13.3
+flatbuffers==24.3.25
 fqdn==1.5.1
 fsspec==2024.3.1
+gast==0.4.0
+google-auth==2.30.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.64.1
 gym==0.26.2
 gym-notices==0.0.8
 gymnasium==0.29.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.4
 ipykernel==6.29.4
 ipython==8.25.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.6
 isoduration==20.11.0
+jax==0.4.28
 jedi==0.19.1
 Jinja2==3.1.2
+json5==0.9.24
 jsonpointer==2.3
 jsonschema==4.17.3
+jsonschema-specifications==2023.12.1
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
+jupyter-lsp==2.2.4
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
+jupyterlab==4.1.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+jupyterlab_server==2.25.4
+keras==2.12.0
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==2.0.5
+ml-dtypes==0.2.0
 mpmath==1.3.0
+namex==0.0.8
 nbclassic==1.0.0
 nbclient==0.7.4
 nbconvert==7.4.0
@@ -56,7 +86,11 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook==6.5.4
 notebook_shim==0.2.3
-numpy==1.26.4
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optree==0.11.0
+overrides==7.7.0
 packaging==24.0
 pandocfilters==1.5.0
 parso==0.8.4
@@ -65,8 +99,11 @@ pillow==10.3.0
 platformdirs==4.2.2
 prometheus-client==0.16.0
 prompt_toolkit==3.0.46
+protobuf==4.25.3
 psutil==5.9.8
 pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.21
 pygame==2.5.2
 Pygments==2.18.0
@@ -79,24 +116,42 @@ PyYAML==6.0
 pyzmq==26.0.3
 qtconsole==5.4.3
 QtPy==2.3.1
+referencing==0.34.0
+requests==2.31.0
+requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.0
+rsa==4.9
+scipy==1.13.1
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.3
 sympy==1.12
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
 terminado==0.17.1
 tinycss2==1.2.1
 torch==2.2.2
 torchvision==0.17.2
 tornado==6.4
 traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.1
 uri-template==1.2.0
+urllib3==2.2.1
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
+Werkzeug==3.0.3
 widgetsnbextension==4.0.7
+wrapt==1.14.1
