--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ charset-normalizer==3.3.2
 cloudpickle==3.0.0
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
@@ -28,6 +30,7 @@ Farama-Notifications==0.0.4
 fastjsonschema==2.16.3
 filelock==3.13.3
 flatbuffers==24.3.25
+fonttools==4.53.0
 fqdn==1.5.1
 fsspec==2024.3.1
 gast==0.4.0
@@ -68,10 +71,12 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
 jupyterlab_server==2.25.4
 keras==2.12.0
+kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.2
+matplotlib==3.9.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==2.0.5
@@ -92,6 +97,7 @@ opt-einsum==3.3.0
 optree==0.11.0
 overrides==7.7.0
 packaging==24.0
+pandas==2.2.2
 pandocfilters==1.5.0
 parso==0.8.4
 pickleshare==0.7.5
@@ -107,9 +113,11 @@ pyasn1_modules==0.4.0
 pycparser==2.21
 pygame==2.5.2
 Pygments==2.18.0
+pyparsing==3.1.2
 pyrsistent==0.19.3
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+pytz==2024.1
 pywin32==306
 pywinpty==2.0.10
 PyYAML==6.0
@@ -125,6 +133,7 @@ rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
 scipy==1.13.1
+seaborn==0.13.2
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -146,6 +155,7 @@ tornado==6.4
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.1
+tzdata==2024.1
 uri-template==1.2.0
 urllib3==2.2.1
 wcwidth==0.2.13
